# SandboxUtils

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  config.h.in  configure  configure.ac  sandboxutils.pc.in
autom4te.cache/: output.1  requests  traces.0  traces.1
data/: Makefile.am  Makefile.in  SecureFileAccess.service  SecureFileAccess.service.in  org.mupuf.SecureFileAccess.service.in
docs/: Makefile.am  version.xml.in
docs/reference/: Makefile.am
docs/reference/sandboxutils/: Makefile.am  history.xml  how-to-contribute.xml  how-to-use.xml  objectives.xml  sandboxutils-docs.xml  style.css  visual_index.xml
examples/: Makefile.am
examples/application3/: Makefile.am  exampleappwin.c  exampleappwin.h  main.c
lib/: Makefile.am  README  configure.ac  localfilechooserdialog.c  localfilechooserdialog.h  remotefilechooserdialog.c  remotefilechooserdialog.h  sandboxfilechooserdialog.c  sandboxfilechooserdialog.h  sandboxfilechooserdialoginterface.xml  sandboxutils.h  sandboxutilscommon.c  sandboxutilscommon.h  sandboxutilscommon.h.in  sandboxutilsmarshals.c  sandboxutilsmarshals.h  sandboxutilsmarshals.list
lib/docs/: Makefile.am  sandboxutils-docs.sgml
lib/src/: Makefile.am  localfilechooserdialog.c  localfilechooserdialog.h  sandboxutilscommon.h
mockups/sfcd-autocompletion/: feedback  mockup.xcf
server/: AUTHORS  COPYING  ChangeLog  Makefile.am  README  TODO  sandboxfilechooserdialogdbuswrapper.c  sandboxfilechooserdialogdbuswrapper.h  sandboxutilsclientmanager.c  sandboxutilsd.c
server/data/: Makefile.am  README  SandboxUtils.service.in
server/src/: Makefile.am  sandboxfilechooserdialog.c  sandboxfilechooserdialog.h  sandboxfilechooserdialogdbuswrapper.h  sandboxfilechooserdialoginterface.xml  sandboxutilsmarshals.h
src/: Makefile.am  Makefile.in  client-bindings.h  sandboxfilechooserdialog.c  sandboxfilechooserdialog.h  sandboxfilechooserdialogdbuswrapper.c  sandboxfilechooserdialogdbuswrapper.h  sandboxfilechooserdialoginterface.xml  sandboxutilsclientmanager.c  sandboxutilsclientmanager.h  sandboxutilscommon.h  sandboxutilsd.c  sandboxutilsmarshals.c  sandboxutilsmarshals.list  server.c  server.h  sfa-interface.xml
src/0.2/: server.c  server.h
tests/: README  main.c
